test_suite/tests/ui/with/incorrect_type.stderr
error[E0277]: the trait bound `&u8: Serializer` is not satisfied
  --> tests/ui/with/incorrect_type.rs:14:10
   |
14 | #[derive(Serialize, Deserialize)]
   |          ^^^^^^^^^ the trait `Serializer` is not implemented for `&u8`
15 | struct W(#[serde(with = "w")] u8, u8);
   |                         --- required by a bound introduced by this call
   |
   = help: the following other types implement trait `Serializer`:
             &mut Formatter<'a>
             FlatMapSerializer<'a, M>
             _::_serde::__private::ser::content::ContentSerializer<E>
note: required by a bound in `w::serialize`
  --> tests/ui/with/incorrect_type.rs:9:28
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |                            ^^^^^^^^^^ required by this bound in `serialize`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/with/incorrect_type.rs:15:25
   |
14 | #[derive(Serialize, Deserialize)]
   |          --------- unexpected argument #2 of type `__S`
15 | struct W(#[serde(with = "w")] u8, u8);
   |                         ^^^
   |
note: function defined here
  --> tests/ui/with/incorrect_type.rs:9:12
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |            ^^^^^^^^^

error[E0277]: the trait bound `&u8: Serializer` is not satisfied
  --> tests/ui/with/incorrect_type.rs:15:25
   |
15 | struct W(#[serde(with = "w")] u8, u8);
   |                         ^^^ the trait `Serializer` is not implemented for `&u8`
   |
   = help: the following other types implement trait `Serializer`:
             &mut Formatter<'a>
             FlatMapSerializer<'a, M>
             _::_serde::__private::ser::content::ContentSerializer<E>

error[E0308]: `?` operator has incompatible types
  --> tests/ui/with/incorrect_type.rs:15:25
   |
15 | struct W(#[serde(with = "w")] u8, u8);
   |                         ^^^ expected `u8`, found `()`
   |
   = note: `?` operator cannot convert from `()` to `u8`

error[E0277]: the trait bound `&u8: Serializer` is not satisfied
  --> tests/ui/with/incorrect_type.rs:17:10
   |
17 | #[derive(Serialize, Deserialize)]
   |          ^^^^^^^^^ the trait `Serializer` is not implemented for `&u8`
18 | struct S(#[serde(serialize_with = "w::serialize")] u8, u8);
   |                                   -------------- required by a bound introduced by this call
   |
   = help: the following other types implement trait `Serializer`:
             &mut Formatter<'a>
             FlatMapSerializer<'a, M>
             _::_serde::__private::ser::content::ContentSerializer<E>
note: required by a bound in `w::serialize`
  --> tests/ui/with/incorrect_type.rs:9:28
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |                            ^^^^^^^^^^ required by this bound in `serialize`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/with/incorrect_type.rs:18:35
   |
17 | #[derive(Serialize, Deserialize)]
   |          --------- unexpected argument #2 of type `__S`
18 | struct S(#[serde(serialize_with = "w::serialize")] u8, u8);
   |                                   ^^^^^^^^^^^^^^
   |
note: function defined here
  --> tests/ui/with/incorrect_type.rs:9:12
   |
 9 |     pub fn serialize<T, S: Serializer>(_: S) -> Result<S::Ok, S::Error> {
   |            ^^^^^^^^^

error[E0277]: the trait bound `&u8: Serializer` is not satisfied
  --> tests/ui/with/incorrect_type.rs:18:35
   |
18 | struct S(#[serde(serialize_with = "w::serialize")] u8, u8);
   |                                   ^^^^^^^^^^^^^^ the trait `Serializer` is not implemented for `&u8`
   |
   = help: the following other types implement trait `Serializer`:
             &mut Formatter<'a>
             FlatMapSerializer<'a, M>
             _::_serde::__private::ser::content::ContentSerializer<E>

error[E0308]: `?` operator has incompatible types
  --> tests/ui/with/incorrect_type.rs:21:37
   |
21 | struct D(#[serde(deserialize_with = "w::deserialize")] u8, u8);
   |                                     ^^^^^^^^^^^^^^^^ expected `u8`, found `()`
   |
   = note: `?` operator cannot convert from `()` to `u8`
